--- a/Grooming_Reservation_System_Backend/src/main/resources/application.properties
+++ b/Grooming_Reservation_System_Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8990
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/groomingdb
+spring.datasource.url = jdbc:mysql://localhost:3306/groomingdb_1
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.show-sql = true
@@ -9,4 +9,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
  #Hibernate ddl auto property
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=groomingreservation@gmail.com
+spring.mail.password=hlsx dvue zgha hrjl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
